move tokenAliasMap into `autoCreationLogic`
Signed-off-by: Neeharika-Sompalli <neeharika.sompalli@swirldslabs.com>